Coreccting every user data (Second Commit)

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -418,15 +418,15 @@
               <a
                 href="#"
                 class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
-                ><i class="fas fa-download fa-sm text-white-50"></i> ساختن
+                ><i class="fas fa-download fa-sm text-white-50"></i> دیدن
                 کارنامه
               </a>
             </div>
 
             <!-- Content Row -->
-            <div class="row">
+            <div class="row" >
               <!-- Earnings (Monthly) Card Example -->
-              <div class="col-xl-3 col-md-6 mb-4">
+              <div class="col-xl-4 col-md-7 mb-4">
                 <div class="card border-left-primary shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -436,8 +436,8 @@
                         >
                           میانگین ساعات مطالعه
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                          $40,000
+                        <div class="h5 mb-0 font-weight-bold text-gray-800" dir="rtl">
+                         {{ data_avg }}  ساعت
                         </div>
                       </div>
                       <div class="col-auto">
@@ -449,7 +449,7 @@
               </div>
 
               <!-- Earnings (Monthly) Card Example -->
-              <div class="col-xl-3 col-md-6 mb-4">
+              <div class="col-xl-4 col-md-7 mb-4">
                 <div class="card border-left-success shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -457,10 +457,10 @@
                         <div
                           class="text-xs font-weight-bold text-success text-uppercase mb-1"
                         >
-                          Earnings (Annual)
+                          جمع کل ساعات مطالعه
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                          $215,000
+                        <div class="h5 mb-0 font-weight-bold text-gray-800" dir="rtl">
+                            {{ans}} ساعت
                         </div>
                       </div>
                       <div class="col-auto">
@@ -472,7 +472,7 @@
               </div>
 
               <!-- Earnings (Monthly) Card Example -->
-              <div class="col-xl-3 col-md-6 mb-4">
+              <div class="col-xl-4 col-md-7 mb-4">
                 <div class="card border-left-info shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -515,27 +515,7 @@
               </div>
 
               <!-- Pending Requests Card Example -->
-              <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-warning shadow h-100 py-2">
-                  <div class="card-body">
-                    <div class="row no-gutters align-items-center">
-                      <div class="col mr-2">
-                        <div
-                          class="text-xs font-weight-bold text-warning text-uppercase mb-1"
-                        >
-                          Pending Requests
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                          18
-                        </div>
-                      </div>
-                      <div class="col-auto">
-                        <i class="fas fa-comments fa-2x text-gray-300"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+
             </div>
 
             <!-- Content Row -->
@@ -887,7 +867,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+            <h5 class="modal-title" id="exampleModalLabel">میخوای از حساب کاربریت خارج بشی ؟</h5>
             <button
               class="close"
               type="button"
@@ -898,7 +878,7 @@
             </button>
           </div>
           <div class="modal-body">
-            Select "Logout" below if you are ready to end your current session.
+            اگر واقعا می خواهید از حساب کاربری خود خارج شوید دکمه خارج شدن را بزنید
           </div>
           <div class="modal-footer">
             <button
@@ -906,9 +886,9 @@
               type="button"
               data-dismiss="modal"
             >
-              Cancel
+              لغو
             </button>
-            <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+            <a class="btn btn-primary" href="{% url 'logout' %}">خارج شدن</a>
           </div>
         </div>
       </div>
@@ -964,20 +944,7 @@
       var myLineChart = new Chart(ctx, {
         type: "line",
         data: {
-          labels: [
-            "فروردین",
-            "اردیبهشت",
-            "خرداد",
-            "تیر",
-            "مرداد",
-            "شهریور",
-            "مهر",
-            "آبان",
-            "آذر",
-            "دی",
-            "بهمن",
-            "اسفند",
-          ],
+          labels: {{labels|safe}},
           datasets: [
             {
               label: "ساعات مطالعه",
