--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -11,7 +11,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - Login</title>
+    <title>ورود به حساب - تاپ درس</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -37,7 +37,10 @@
             <div class="card-body p-0">
               <!-- Nested Row within Card Body -->
               <div class="row">
+                {% comment %}
                 <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                {% endcomment %}
+                <img class="col-lg-6 d-none d-lg-block pl-5" src="{% static 'img/undraw_everywhere.svg' %}" alt="" />
                 <div class="col-lg-6">
                   <div class="p-5">
                     <div class="text-center">
