--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -76,7 +76,7 @@
                         وارد شوید
                       </button>
                       <a
-                        href="index.html"
+                        href="http://127.0.0.1:8000/accounts/google/login/"
                         class="btn btn-google btn-user btn-block"
                       >
                         <i class="fab fa-google fa-fw"></i> با گوگل وارد شوید
