goals half created

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -9,7 +9,7 @@
                     <a
                             href="#"
                             class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
-                    ><i class="fas fa-download fa-sm text-white-50"></i> دیدن
+                    ><i class="fas fa-eye fa-sm text-white-50"></i> دیدن
                         کارنامه
                     </a>
                 </div>
