--- a/templates/main.html
+++ b/templates/main.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta       meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    <meta meta
+          name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content=""/>
     <meta name="author" content=""/>
@@ -42,7 +42,7 @@
         <!-- Sidebar - Brand -->
         <a
                 class="sidebar-brand d-flex align-items-center justify-content-center"
-                href="index.html"
+                href="{% url 'home' %}"
         >
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
@@ -62,11 +62,9 @@
         </li>
 
         <!-- Divider -->
-        <hr class="sidebar-divider"/>
-
+        <hr class="sidebar-divider my-0"/>
         <!-- Heading -->
 
-        <div class="sidebar-heading">Addons</div>
 
         <!-- Nav Item - Pages Collapse Menu -->
 
@@ -75,7 +73,7 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'create-topic' %}">
                 <i class="fas fa-fw fa-chart-area"></i>
-                <span>افزایش ساعت مطالعه</span></a
+                <span>ثبت مطالعه جدید</span></a
             >
         </li>
 
@@ -84,6 +82,16 @@
             <a class="nav-link" href="{% url 'articles' %}">
                 <i class="fas fa-fw fa-table"></i>
                 <span>مقالات</span></a
+            >
+        </li>
+
+
+
+
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'goals' %}">
+                <i class="fas fa-fw fa-atom"></i>
+                <span>هدف گذاری</span></a
             >
         </li>
 
@@ -133,26 +141,26 @@
 
                 {% if request.path == '/articles/' %}
                     <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                        action="{% url 'articles' %}"
-                        method="GET"
-                >
-                    <div class="input-group">
-                        <input
-                                type="text"
-                                name="q"
-                                class="form-control bg-light border-0 small"
-                                placeholder="جست و جو کنید"
-                                aria-label="Search"
-                                aria-describedby="basic-addon2"
-                        />
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="button">
-                                <i class="fas fa-search fa-sm"></i>
-                            </button>
+                            class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+                            action="{% url 'articles' %}"
+                            method="GET"
+                    >
+                        <div class="input-group">
+                            <input
+                                    type="text"
+                                    name="q"
+                                    class="form-control bg-light border-0 small"
+                                    placeholder="جست و جو کنید"
+                                    aria-label="Search"
+                                    aria-describedby="basic-addon2"
+                            />
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button">
+                                    <i class="fas fa-search fa-sm"></i>
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
                 {% endif %}
 
                 <!-- Topbar Navbar -->
@@ -220,7 +228,7 @@
 
                     <div class="topbar-divider d-none d-sm-block"></div>
 
-                    <!-- Nav Item - User Information -->
+                    <!-- Nav Item - User primaryrmation -->
                     <li class="nav-item dropdown no-arrow">
                         <a
                                 class="nav-link dropdown-toggle"
@@ -241,7 +249,7 @@
                                     src="{{ profile_picture_url }}"
                             />
                         </a>
-                        <!-- Dropdown - User Information -->
+                        <!-- Dropdown - User primaryrmation -->
                         <div
                                 class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown"
@@ -272,7 +280,7 @@
 
                             {% else %}
                                 <a class="dropdown-item" href="{% url 'login' %}">
-                                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                     وارد شوید
                                 </a>
                             {% endif %}
@@ -283,8 +291,8 @@
             <!-- End of Topbar -->
 
             <!-- Begin Page Content -->
-        {% block content %}
-        {% endblock content %}
+            {% block content %}
+            {% endblock content %}
 
 
             <!-- End of Main Content -->
@@ -358,30 +366,7 @@
             '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
         Chart.defaults.global.defaultFontColor = "#858796";
 
-        function number_format(number, decimals, dec_point, thousands_sep) {
-            // *     example: number_format(1234.56, 2, ',', ' ');
-            // *     return: '1 234,56'
-            number = (number + "").replace(",", "").replace(" ", "");
-            var n = !isFinite(+number) ? 0 : +number,
-                prec = !isFinite(+decimals) ? 0 : Math.abs(decimals),
-                sep = typeof thousands_sep === "undefined" ? "," : thousands_sep,
-                dec = typeof dec_point === "undefined" ? "." : dec_point,
-                s = "",
-                toFixedFix = function (n, prec) {
-                    var k = Math.pow(10, prec);
-                    return "" + Math.round(n * k) / k;
-                };
-            // Fix for IE parseFloat(0.55).toFixed(0) = 0;
-            s = (prec ? toFixedFix(n, prec) : "" + Math.round(n)).split(".");
-            if (s[0].length > 3) {
-                s[0] = s[0].replace(/\B(?=(?:\d{3})+(?!\d))/g, sep);
-            }
-            if ((s[1] || "").length < prec) {
-                s[1] = s[1] || "";
-                s[1] += new Array(prec - s[1].length + 1).join("0");
-            }
-            return s.join(dec);
-        }
+
 
         // Area Chart Example
         var ctx = document.getElementById("myAreaChart");
@@ -477,8 +462,8 @@
         Chart.defaults.global.defaultFontColor = "#858796";
 
         // Pie Chart Example
-        var ctx = document.getElementById("myPieChart");
-        var myPieChart = new Chart(ctx, {
+        var ctx2 = document.getElementById("myPieChart");
+        var myPieChart = new Chart(ctx2, {
             type: "doughnut",
             data: {
                 labels: {{ labels|safe }},
@@ -506,6 +491,8 @@
                 cutoutPercentage: 80,
             },
         });
+
+
 
     </script>
 
