--- a/goals/templates/goals/goal_form.html
+++ b/goals/templates/goals/goal_form.html
@@ -52,6 +52,17 @@
                                 />
                             </div>
                             <div class="form-group row justify-content-start">
+                                <label for="desc">توضیحات در مورد هدفت ؟</label>
+{#                                <input#}
+{#                                        type="text"#}
+{#                                        class="form-control form-control-user"#}
+{#                                        id="name"#}
+{#                                        name="name"#}
+{#                                        placeholder="نام کتاب درس و ..."#}
+{#                                />#}
+                                <textarea class="form-control form-control-user" style="resize: none" name="desc" id="desc" cols="1" rows="2"></textarea>
+                            </div>
+                            <div class="form-group row justify-content-start">
                                 <label for="period" dir="rtl">بازه زمانی مورد نظرت چیه ؟</label>
                                 <input
                                         required
@@ -105,7 +116,7 @@
                                     type="submit"
                                     class="btn btn-info btn-user btn-block"
                             >
-                                 ساخت هدف جدید
+                                ساخت هدف جدید
                             </button>
 
                         </form>
